refactor(service): optimize AnomalyService to fully linear complexity